Refactor Gmail Poller: Remove setup_auth and enhanced_poller scripts, streamline main polling logic, and integrate Gemini AI for email classification and logistics data extraction. Update models and services for improved functionality and clarity. Remove local test script.

--- a/.env.example
+++ b/.env.example
@@ -2,23 +2,25 @@
 # Copy this file to .env and update with your values
 
 # Gmail API Configuration
-GMAIL_CREDENTIALS_FILE=/app/credentials.json
+GMAIL_CREDENTIALS_FILE=./credentials.json
+
+# Gemini AI Configuration
+GEMINI_API_KEY=your_gemini_api_key_here
 
 # Application Configuration
-DATA_DIR=/app/data
-LOG_DIR=/app/logs
+DATA_DIR=./data
+LOG_DIR=./logs
 MAX_EMAILS=10
-EMAIL_QUERY=
+EMAIL_QUERY=is:unread
 LOG_LEVEL=INFO
-OUTPUT_FILE=/app/data/emails.json
+OUTPUT_FILE=./data/emails.json
 
-# Local Development Paths (for testing outside Docker)
-# DATA_DIR=./data
-# LOG_DIR=./logs
-# GMAIL_CREDENTIALS_FILE=./credentials.json
-# OUTPUT_FILE=./data/emails.json
+# Docker Configuration (uncomment for Docker deployment)
+# GMAIL_CREDENTIALS_FILE=/app/credentials.json
+# DATA_DIR=/app/data
+# LOG_DIR=/app/logs
+# OUTPUT_FILE=/app/data/emails.json
 
 # Optional: Email filters
 # EMAIL_QUERY=from:specific@domain.com
 # EMAIL_QUERY=subject:"Order Confirmation"
-# EMAIL_QUERY=is:unread
