--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ GMAIL_CREDENTIALS_FILE=./credentials.json
 
 # Gemini AI Configuration
 GEMINI_API_KEY=your_gemini_api_key_here
+GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
 
 # Application Configuration
 DATA_DIR=./data
