--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,10 @@ GMAIL_CREDENTIALS_FILE=./credentials.json
 GEMINI_API_KEY=your_gemini_api_key_here
 GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
 
+# Google Sheets Database Configuration
+GOOGLE_SHEETS_SPREADSHEET_ID=your_google_sheets_spreadsheet_id_here
+GOOGLE_SHEETS_RANGE_NAME=Sheet1!A:Z
+
 # Application Configuration
 DATA_DIR=./data
 LOG_DIR=./logs
