--- a/.env.example
+++ b/.env.example
@@ -1,31 +1,30 @@
-# Gmail Poller Configuration
+# FleetManager Environment Configuration
 # Copy this file to .env and update with your values
 
-# Gmail API Configuration
-GMAIL_CREDENTIALS_FILE=./credentials.json
-
-# Gemini AI Configuration
+# API Keys (Required)
 GEMINI_API_KEY=your_gemini_api_key_here
 GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
 
-# Google Sheets Database Configuration
+# Google Sheets Database Configuration (Required)
 GOOGLE_SHEETS_SPREADSHEET_ID=your_google_sheets_spreadsheet_id_here
 GOOGLE_SHEETS_RANGE_NAME=Sheet1!A:Z
 
+# Gmail API Configuration
+GMAIL_CREDENTIALS_FILE=/app/credentials/credentials.json
+
 # Application Configuration
-DATA_DIR=./data
-LOG_DIR=./logs
-MAX_EMAILS=10
-EMAIL_QUERY=is:unread
+DATA_DIR=/app/data
 LOG_LEVEL=INFO
-OUTPUT_FILE=./data/emails.json
 
-# Docker Configuration (uncomment for Docker deployment)
-# GMAIL_CREDENTIALS_FILE=/app/credentials.json
-# DATA_DIR=/app/data
-# LOG_DIR=/app/logs
-# OUTPUT_FILE=/app/data/emails.json
+# Testing Configuration (set to 'true' for testing)
+TEST_MODE=false
+TEST_EMAIL_QUERY=
 
-# Optional: Email filters
-# EMAIL_QUERY=from:specific@domain.com
-# EMAIL_QUERY=subject:"Order Confirmation"
+# Production Notes:
+# - Use GitHub Secrets for API keys in production
+# - Mount credentials directory as Docker volume
+# - Ensure proper file permissions on token files
+
+# Optional: Email filters for testing
+# TEST_EMAIL_QUERY=from:specific@domain.com
+# TEST_EMAIL_QUERY=subject:"Order Confirmation"
