--- a/.gitignore
+++ b/.gitignore
@@ -205,9 +205,28 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# FleetManager specific
 /data
 /logs
 /.claude
 credentials.json
 token.json
 token_sheets.json
+auth_code.txt
+imported_token.json
+exported_token.json
+
+# Docker
+.dockerignore
+
+# Local development
+.DS_Store
+*.swp
+*.swo
+*~
+
+# Backup files
+*.bak
+*.backup
+*~
