Add permissions for deployment job in GitHub Actions workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -118,6 +118,9 @@ jobs:
   deploy:
     needs: build
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      deployments: write
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     environment: 
       name: production
