Add permissions for deployments in GitHub Actions workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -121,6 +121,7 @@ jobs:
     permissions:
       contents: read
       deployments: write
+      secrets: inherit
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     environment: 
       name: production
