Add unit tests for ProcessingPipeline and mock processing steps
- Created a new test module for the ProcessingPipeline class.
- Implemented mock processing steps to simulate different processing scenarios.
- Added tests for pipeline initialization, execution of steps, handling of critical and non-critical step failures, and logging.
- Ensured coverage for various edge cases, including duplicate orders and exceptions during processing.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+  IMAGE_NAME: fleetmanager/order-poller
   DEPLOY_DIR: /root/fleetmanager
 
 jobs:
@@ -16,10 +16,6 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-
-    - name: Set IMAGE_NAME to lowercase
-      id: image_name
-      run: echo "IMAGE_NAME=$(echo '${{ github.repository }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
 
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -30,7 +26,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install pytest
+
+    - name: Test with pytest
+      run: |
+        pip install pytest pytest-cov
+        pytest tests.py --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
 
   build:
     needs: test
