--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,7 @@ jobs:
     - name: Test with pytest
       run: |
         pip install pytest pytest-cov
+        export PYTHONPATH="$PYTHONPATH:$(pwd)/src"
         pytest tests/ --doctest-modules --junitxml=junit/test-results.xml --cov=src --cov-report=xml --cov-report=html
 
   build:
