feat: Implement email processing pipeline with classification, logistics extraction, geocoding, and database saving steps
- Added ProcessingContext to manage data between processing steps.
- Created abstract ProcessingStep class and ProcessingResult for step results.
- Implemented EmailClassificationStep for classifying emails using Gemini API.
- Developed LogisticsExtractionStep for extracting logistics data from emails.
- Added GeocodingStep to fill missing coordinates using Google Maps API.
- Implemented DatabaseSaveStep to save logistics data to Google Sheets.
- Created MailClassifier and LogisticsDataExtractor services for email classification and logistics extraction.
- Added unit tests for the processing pipeline and its steps.
- Introduced shared models for Email and LogisticsDataExtract.
- Created Dockerfile and README for future UI service.
- Removed outdated test mode examples documentation.

--- a/services/email-processor/Dockerfile
+++ b/services/email-processor/Dockerfile
@@ -45,7 +45,7 @@ WORKDIR /app
 COPY --from=builder /opt/venv /opt/venv
 
 # Copy application code with proper ownership
-COPY --chown=appuser:appuser src/ ./src/
+COPY --chown=appuser:appuser . .
 COPY --chown=appuser:appuser .env.example /app/.env.example
 
 # Create necessary directories with proper permissions
