--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,12 @@
 version: '3.8'
 
 services:
-  fleetmanager:
-    image: ghcr.io/valkozaur/fleetmanager:latest
-    container_name: fleetmanager
+  # Email Processing Service
+  email-processor:
+    build:
+      context: ./services/email-processor
+      dockerfile: Dockerfile
+    container_name: fleetmanager-email-processor
     restart: unless-stopped
     env_file:
       - .env
@@ -25,9 +28,63 @@ services:
       timeout: 10s
       retries: 3
       start_period: 10s
+    networks:
+      - fleetmanager-network
+
+  # Future Web UI Service
+  # ui:
+  #   build:
+  #     context: ./services/ui
+  #     dockerfile: Dockerfile
+  #   container_name: fleetmanager-ui
+  #   restart: unless-stopped
+  #   ports:
+  #     - "3000:3000"
+  #   environment:
+  #     - REACT_APP_API_URL=http://api-gateway:8080
+  #   depends_on:
+  #     - api-gateway
+  #   networks:
+  #     - fleetmanager-network
+
+  # Future API Gateway Service
+  # api-gateway:
+  #   build:
+  #     context: ./services/api-gateway
+  #     dockerfile: Dockerfile
+  #   container_name: fleetmanager-api-gateway
+  #   restart: unless-stopped
+  #   ports:
+  #     - "8080:8080"
+  #   environment:
+  #     - EMAIL_PROCESSOR_URL=http://email-processor:8000
+  #   depends_on:
+  #     - email-processor
+  #   networks:
+  #     - fleetmanager-network
+
+  # Nginx Reverse Proxy (future)
+  # nginx:
+  #   image: nginx:alpine
+  #   container_name: fleetmanager-nginx
+  #   restart: unless-stopped
+  #   ports:
+  #     - "80:80"
+  #     - "443:443"
+  #   volumes:
+  #     - ./infrastructure/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+  #   depends_on:
+  #     - ui
+  #     - api-gateway
+  #   networks:
+  #     - fleetmanager-network
 
 volumes:
   fleetmanager_data:
     driver: local
   fleetmanager_logs:
     driver: local
+
+networks:
+  fleetmanager-network:
+    driver: bridge
