feat: Add Docker and Nginx configurations, cron job for email-processor, and update environment variables

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,15 @@
+# FleetManager root environment variables (copy to .env and edit)
+
+# Google / Gmail
+GOOGLE_SHEETS_SPREADSHEET_ID=
+GOOGLE_MAPS_API_KEY=
+
+# GitHub Container Registry
+GHCR_USERNAME=
+GHCR_TOKEN=
+
+# Runtime
+LOG_LEVEL=INFO
 # FleetManager Environment Configuration
 # Copy this file to .env and update with your values
 
