--- a/.gitignore
+++ b/.gitignore
@@ -217,6 +217,18 @@ auth_code.txt
 imported_token.json
 exported_token.json
 
+# Production environment files
+.env.production
+.env.staging
+.env.local
+
+# SSH keys (deployment)
+*.pem
+*.key
+id_rsa*
+id_ed25519*
+!*.pub
+
 # Docker
 .dockerignore
 
