--- a/.github/workflows/deploy-email-processor.yml
+++ b/.github/workflows/deploy-email-processor.yml
@@ -29,6 +29,8 @@ jobs:
     permissions:
       contents: read
       packages: write
+      id-token: write
+      attestations: write
     
     outputs:
       image-tag: ${{ steps.meta.outputs.tags }}
