--- a/.github/workflows/deploy-email-processor.yml
+++ b/.github/workflows/deploy-email-processor.yml
@@ -19,6 +19,13 @@ on:
           - production
           - staging
 
+# Set workflow-level permissions
+permissions:
+  contents: read
+  packages: write
+  id-token: write
+  attestations: write
+
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository_owner }}/fleetmanager-email-processor
@@ -47,6 +54,14 @@ jobs:
         id: repo-owner
         run: |
           echo "owner=$(echo ${{ github.repository_owner }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUT
+
+      - name: Debug registry information
+        run: |
+          echo "Registry: ${{ env.REGISTRY }}"
+          echo "Repository owner (original): ${{ github.repository_owner }}"
+          echo "Repository owner (lowercase): ${{ steps.repo-owner.outputs.owner }}"
+          echo "Actor: ${{ github.actor }}"
+          echo "Image will be: ${{ env.REGISTRY }}/${{ steps.repo-owner.outputs.owner }}/fleetmanager-email-processor"
 
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
