update to use service account

--- a/.env.example
+++ b/.env.example
@@ -21,8 +21,9 @@ GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
 GOOGLE_SHEETS_SPREADSHEET_ID=your_google_sheets_spreadsheet_id_here
 GOOGLE_SHEETS_RANGE_NAME=Sheet1!A:Z
 
-# Gmail API Configuration
-GMAIL_CREDENTIALS_FILE=/app/credentials/credentials.json
+# Google Service Account Configuration (Required)
+GOOGLE_SERVICE_ACCOUNT_FILE=/app/credentials/service-account.json
+GMAIL_DELEGATED_USER_EMAIL=user@yourdomain.com
 
 # Application Configuration
 DATA_DIR=/app/data
@@ -34,8 +35,9 @@ TEST_EMAIL_QUERY=
 
 # Production Notes:
 # - Use GitHub Secrets for API keys in production
-# - Mount credentials directory as Docker volume
-# - Ensure proper file permissions on token files
+# - Service account must have domain-wide delegation enabled
+# - Mount credentials directory as Docker volume containing service-account.json
+# - Ensure proper file permissions on service account file
 
 # Optional: Email filters for testing
 # TEST_EMAIL_QUERY=from:specific@domain.com
