--- a/.gitignore
+++ b/.gitignore
@@ -211,6 +211,7 @@ __marimo__/
 /logs
 /.claude
 credentials.json
+service-account.json
 token.json
 token_sheets.json
 auth_code.txt
@@ -242,3 +243,4 @@ id_ed25519*
 *.bak
 *.backup
 *~
+/.credentials
