chore: standardize service name to email-poller across configs
- Set workflow IMAGE_NAME to ghcr.io/valkozaur/email-poller
- Rename containers, images and volumes to email-poller / email_poller_*
  in docker-compose, production compose and workflow
- Update cron job comments and log path to /var/log/email-poller/email-processor.log
- Remove deprecated scripts/deploy-to-hetzner.sh
- Update Dockerfile image description label to "Email Poller - Gmail-based logistics order processing"

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,14 @@ services:
     build:
       context: ./services/email-processor
       dockerfile: Dockerfile
-    container_name: fleetmanager-email-processor
+    container_name: email-poller
     restart: unless-stopped
     env_file:
       - .env
     volumes:
       # Persist data and tokens
-      - fleetmanager_data:/app/data
-      - fleetmanager_logs:/app/logs
+      - email_poller_data:/app/data
+      - email_poller_logs:/app/logs
       # Mount credentials (you'll need to provide these)
       - ./credentials:/app/credentials:ro
     environment:
@@ -80,9 +80,9 @@ services:
   #     - fleetmanager-network
 
 volumes:
-  fleetmanager_data:
+  email_poller_data:
     driver: local
-  fleetmanager_logs:
+  email_poller_logs:
     driver: local
 
 networks:
