ci(email-processor): add deploy job to pull latest image on Hetzner via SSH

--- a/.github/workflows/deploy-email-processor.yml
+++ b/.github/workflows/deploy-email-processor.yml
@@ -86,3 +86,23 @@ jobs:
           subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           subject-digest: ${{ steps.build.outputs.digest }}
           push-to-registry: true
+
+
+  deploy:
+    name: Deploy to Hetzner (SSH)
+    needs: build-and-push
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop'
+    steps:
+      - name: Pull latest image on Hetzner via SSH
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.HETZNER_HOST }}
+          port: ${{ secrets.HETZNER_PORT }}
+          username: ${{ secrets.HETZNER_USER }}
+          key: ${{ secrets.HETZNER_SSH_KEY }}
+          script: |
+            cd fleetmanager
+            docker compose pull
+  
+          
