--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,11 @@
 # FleetManager root environment variables (copy to .env and edit)
 
+# PostgreSQL Database
+POSTGRES_USER=fleetmanager
+POSTGRES_PASSWORD=fleetmanager_dev
+POSTGRES_DB=fleetmanager
+DATABASE_URL=postgresql://fleetmanager:fleetmanager_dev@db:5432/fleetmanager
+
 # Google / Gmail
 GOOGLE_SHEETS_SPREADSHEET_ID=
 GOOGLE_MAPS_API_KEY=
