--- a/infrastructure/docker/docker-compose.prod.yml
+++ b/infrastructure/docker/docker-compose.prod.yml
@@ -1,13 +1,40 @@
-version: '3.8'
+ services:
+  # PostgreSQL Database
+  db:
+    image: postgres:15-alpine
+    container_name: fleetmanager-db
+    restart: unless-stopped
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER:-fleetmanager}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB:-fleetmanager}
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-fleetmanager}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    networks:
+      - fleetmanager-network
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
-services:
   # Email Processing Service - Production Ready
+  # Managed by cron job - not started automatically
   email-processor:
     image: ghcr.io/valkozaur/email-poller:latest
     container_name: email-poller
-    restart: unless-stopped
+    restart: "no"
+    profiles:
+      - manual
     env_file:
-      - /opt/fleetmanager/.env.production
+      - /opt/fleetmanager/.env
     volumes:
       # Persist data and tokens
       - email_poller_data:/app/data
@@ -16,16 +43,18 @@ services:
       - /opt/fleetmanager/credentials:/app/credentials:ro
     environment:
       - DATA_DIR=/app/data
-      - GMAIL_CREDENTIALS_FILE=/app/credentials/credentials.json
     mem_limit: 512m
     mem_reservation: 256m
     cpus: 1.0
     healthcheck:
-      test: ["CMD-SHELL", "test -f /app/credentials/credentials.json || exit 1"]
+      test: ["CMD-SHELL", "test -f /app/credentials/service-account.json || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 3
       start_period: 30s
+    depends_on:
+      db:
+        condition: service_healthy
     networks:
       - fleetmanager-network
     logging:
@@ -35,6 +64,8 @@ services:
         max-file: "3"
 
 volumes:
+  postgres_data:
+    driver: local
   email_poller_data:
     driver: local
   email_poller_logs:
