infrastructure: switch prod compose to local .env and ./credentials; ci: pull only email-processor during deploy

--- a/.github/workflows/deploy-email-processor.yml
+++ b/.github/workflows/deploy-email-processor.yml
@@ -103,6 +103,6 @@ jobs:
           key: ${{ secrets.HETZNER_SSH_KEY }}
           script: |
             cd fleetmanager
-            docker compose pull
+            docker compose pull email-processor
   
           
