email-processor: use shared.models, fix Docker context/mount & add debug tooling
- Switch internal imports to shared.models for email/logistics/orm types
- Update Dockerfile/COPY paths to work with repository root build context
- Change docker-compose: build.context to ., point dockerfile to services/email-processor/Dockerfile, mount ./.credentials, and add a debug command to run a single email id
- Add debug logging in main.py to write CWD, service account file and directory listings to /app/logs/debug.log
- Populate LogisticsDataExtract with email metadata in extractor
- Parse/convert date strings to datetime in DatabaseClient, improve error messages and add debug prints; use sqlalchemy.text for test query
- Extend telemetry configuration to register OTLP metrics exporter (MeterProvider)
- Update .env.example to include OpenTelemetry env vars

--- a/.env.example
+++ b/.env.example
@@ -48,3 +48,7 @@ TEST_EMAIL_QUERY=
 # Optional: Email filters for testing
 # TEST_EMAIL_QUERY=from:specific@domain.com
 # TEST_EMAIL_QUERY=subject:"Order Confirmation"
+
+# OpenTelemetry Configuration
+OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4317
+OTEL_SERVICE_NAME=email-processor
