--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,22 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = []
 
-[dependency-groups]
+[project.optional-dependencies]
+email-processor = [
+    "google-api-python-client==2.185.0",
+    "google-auth==2.41.1",
+    "google-auth-oauthlib==1.2.2",
+    "google-auth-httplib2==0.2.0",
+    "python-dotenv==1.2.1",
+    "click==8.1.8",
+    "google-genai==1.46.0",
+    "httpx==0.28.1",
+    "structlog==25.5.0",
+    "pydantic==2.12.3",
+    "sqlalchemy==2.0.44",
+    "psycopg2-binary==2.9.11",
+    "alembic",
+]
 dev = [
     "pytest>=8.4.2",
     "pytest-cov>=7.0.0",
@@ -16,3 +31,7 @@ dev = [
 pythonpath = ["src"]
 testpaths = ["tests"]
 addopts = "--strict-markers"
+
+[tool.setuptools.packages.find]
+include = ["database*"]
+
