Refactor: extract email-processor service and update build/migration configs
- Move email-processor deps out of root pyproject into services/email-processor/pyproject.toml and add uv.lock
- Rewrite services/email-processor/Dockerfile to use uv builder + venv and copy built .venv
- Fix services/database-migration Dockerfile WORKDIR and uv install path
- Adjust alembic config and migrations env import (prepend_sys_path -> . and import models.orm)
- Correct docker-compose build dockerfile path for database-migration and ensure email-processor depends_on database-migration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
   database-migration:
     build:
       context: ./services/database-migration
-      dockerfile: ./services/database-migration/Dockerfile
+      dockerfile: Dockerfile
     container_name: database-migration
     command: upgrade head
     env_file:
@@ -42,6 +42,9 @@ services:
     build:
       context: .
       dockerfile: ./services/email-processor/Dockerfile
+    depends_on:
+      database-migration:
+        condition: service_completed_successfully
     container_name: email-poller
     restart: unless-stopped
     env_file:
