Refactor database migration and email processing services (#20)
* edit the migration project and dockerfiles

* Refactor: Move database service to services/database-migration

* Fix: Correct docker-compose.yml syntax for database-migration service

* Fix: Remove setuptools package find from root pyproject.toml

* Refactor: extract email-processor service and update build/migration configs

- Move email-processor deps out of root pyproject into services/email-processor/pyproject.toml and add uv.lock
- Rewrite services/email-processor/Dockerfile to use uv builder + venv and copy built .venv
- Fix services/database-migration Dockerfile WORKDIR and uv install path
- Adjust alembic config and migrations env import (prepend_sys_path -> . and import models.orm)
- Correct docker-compose build dockerfile path for database-migration and ensure email-processor depends_on database-migration

* CI: Simplify deploy workflow, add database-migration build and prod compose

- Rename and streamline GitHub Actions workflow (removed branch/path filters and workflow_dispatch)
- Split build jobs: build-email-processor and new build-database-migration using docker metadata & build-push
- Update deploy job to depend on both build jobs and run docker-compose.prod.yml pull/up via SSH
- Add docker-compose.prod.yml defining db, database-migration and email-processor services

* Merge branch 'vn/otel' into vn/feature/migration-service

--- a/services/email-processor/Dockerfile
+++ b/services/email-processor/Dockerfile
@@ -1,82 +1,44 @@
-# Multi-stage build for optimized production image
-# Stage 1: Builder - Install dependencies and compile
-FROM python:3.13.7-slim AS builder
+# syntax=docker/dockerfile:1.4
 
-# Set build-time environment variables
-ENV PYTHONDONTWRITEBYTECODE=1 \
-    PYTHONUNBUFFERED=1 \
-    PIP_NO_CACHE_DIR=1 \
-    PIP_DISABLE_PIP_VERSION_CHECK=1
+# Use the official uv image as a builder
+FROM ghcr.io/astral-sh/uv:0.7.8-python3.13-bookworm as builder
 
-# Install build dependencies
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    gcc \
-    g++ \
-    libpq-dev \
-    && rm -rf /var/lib/apt/lists/*
+WORKDIR /app
 
-# Create virtual environment for isolation
-RUN python -m venv /opt/venv
-ENV PATH="/opt/venv/bin:$PATH"
+# Copy project files for the email-processor service
+COPY services/email-processor/pyproject.toml ./pyproject.toml
+COPY services/email-processor/uv.lock ./uv.lock
 
-# Copy requirements and install dependencies
-COPY services/email-processor/requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+# Build a virtual environment
+RUN uv venv
 
-# Stage 2: Runtime - Minimal production image
-FROM python:3.13.7-slim AS runtime
+# Install dependencies into the virtual environment
+RUN . .venv/bin/activate && uv pip install -r uv.lock
 
-# Set runtime environment variables
-ENV PYTHONDONTWRITEBYTECODE=1 \
-    PYTHONUNBUFFERED=1 \
-    PATH="/opt/venv/bin:$PATH" \
-    PYTHONPATH=/app
+# --- #
 
-# Install runtime dependencies only (if any needed)
-# Currently no runtime deps needed beyond Python
+# Use a slim Python image for the runtime
+FROM python:3.13-slim as runtime
 
-# Create non-root user for security
+WORKDIR /app
+
+# Create a non-root user
 RUN groupadd -r appuser --gid=1000 && \
     useradd -r -g appuser --uid=1000 --home-dir=/app --shell=/sbin/nologin appuser
 
-# Set work directory
-WORKDIR /app
+# Copy the virtual environment from the builder
+COPY --from=builder --chown=appuser:appuser /app/.venv ./.venv
 
-# Copy virtual environment from builder stage
-COPY --from=builder /opt/venv /opt/venv
+# Copy application code
+COPY --chown=appuser:appuser services/email-processor/src ./src
+COPY --chown=appuser:appuser services/email-processor/main.py .
+COPY --chown=appuser:appuser services/database-migration ./database
 
-# Copy application code with proper ownership
-# Copying the whole build context. If `.env.example` is present in the context
-# it will be included by the previous COPY; if it's not present (e.g. when
-# building with the service folder as the context) create an empty example
-# file so the subsequent steps don't fail.
-COPY --chown=appuser:appuser services/email-processor/ /app/
-COPY --chown=appuser:appuser shared/ /app/shared/
+# Activate the virtual environment
+ENV PATH="/app/.venv/bin:$PATH"
+ENV PYTHONPATH=/app
 
-# Replace general README with Docker-specific README
-COPY --chown=appuser:appuser services/email-processor/README.Docker.md /app/README.md
-
-# Ensure an example env file exists inside the image. This avoids failing the
-# build when the source `.env.example` is outside the build context.
-RUN if [ ! -f /app/.env.example ]; then touch /app/.env.example; fi
-
-# Create necessary directories with proper permissions
-RUN mkdir -p /app/data /app/logs /app/credentials && \
-    chown -R appuser:appuser /app && \
-    chmod 755 /app/data /app/logs && \
-    chmod 700 /app/credentials
-
-# Switch to non-root user
 USER appuser
 
-# Add labels for metadata
-LABEL org.opencontainers.image.source="https://github.com/Valkozaur/FleetManager"
-LABEL org.opencontainers.image.description="Email Poller - Gmail-based logistics order processing"
-LABEL org.opencontainers.image.licenses="MIT"
-
-# Health check - verify Python environment and credentials directory
-HEALTHCHECK --interval=30s --timeout=10s --start-period=10s --retries=3 \
-    CMD python -c "import sys; sys.exit(0)" && test -d /app/credentials || exit 1
-
-# Default command
-CMD ["python", "-u", "main.py"]
+# Set the default command
+CMD ["python", "main.py"]
