--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,3 @@
-version: '3.8'
-
-networks:
-  fleetmanager-network:
-    driver: bridge
-
 services:
   # PostgreSQL Database
   db:
@@ -26,11 +20,31 @@ services:
     networks:
       - fleetmanager-network
 
+  # Database Migration Service
+  database-migration:
+    build:
+      context: ./services/database-migration
+      dockerfile: Dockerfile
+    container_name: database-migration
+    command: upgrade head
+    env_file:
+      - .env
+    environment:
+      DATABASE_URL: postgresql://${POSTGRES_USER:-fleetmanager}:${POSTGRES_PASSWORD:-fleetmanager_dev}@db:5432/${POSTGRES_DB:-fleetmanager}
+    depends_on:
+      db:
+        condition: service_healthy
+    networks:
+      - fleetmanager-network
+
   # Email Processing Service
   email-processor:
     build:
       context: .
-      dockerfile: services/email-processor/Dockerfile
+      dockerfile: ./services/email-processor/Dockerfile
+    depends_on:
+      database-migration:
+        condition: service_completed_successfully
     container_name: email-poller
     command: >
       bash -c "
@@ -46,6 +60,7 @@ services:
       - email_poller_data:/app/data
       - email_poller_logs:/app/logs
       # Mount credentials (you'll need to provide these)
+      - ./.credentials:/app/credentials:ro
       - ./.credentials:/app/credentials:ro
     mem_limit: 512m
     mem_reservation: 256m
