--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = []
 
-[dependency-groups]
+[project.optional-dependencies]
 dev = [
     "pytest>=8.4.2",
     "pytest-cov>=7.0.0",
@@ -16,3 +16,4 @@ dev = [
 pythonpath = ["src"]
 testpaths = ["tests"]
 addopts = "--strict-markers"
+
