--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,6 @@
-[project]
-name = "fleetmanager"
-version = "0.1.0"
-description = "Add your description here"
-readme = "README.md"
-requires-python = ">=3.13"
-dependencies = []
-
-[project.optional-dependencies]
-dev = [
-    "pytest>=8.4.2",
-    "pytest-cov>=7.0.0",
+[tool.uv.workspace]
+members = [
+    "services/database-models",
+    "services/email-processor",
+    "services/database-migration"
 ]
-
-[tool.pytest.ini_options]
-pythonpath = ["src"]
-testpaths = ["tests"]
-addopts = "--strict-markers"
-
